# SamplingLandscape

./: .gitignore  .travis.yml  CMakeLists.txt  FindTBB.cmake  README.md  cloud_50  dots_50.txt  main.cpp  mean_landscapes.cpp  pers_22_04.cpp  ripser.cpp
dataset/: random_500.txt
dataset/figures/: bunny500.txt  dots50.txt  dots50_no_number.txt  sphere500.txt  tore500.txt
dataset/magnetometer/: s1.txt  s1000.txt  s2.txt
dataset/magnetometer/ascending_stairs/: p2_1000.txt
dataset/magnetometer/jumping/: p2_1000.txt
dataset/magnetometer/sitting/: p2_1000.txt
dataset/magnetometer/walking_parking_lot/: p2_1000.txt
dep/thread_pool/thread_pool/: thread_pool.hpp
include/algorithm/: Betti_matrix.h  Cloud.h  Simplex_tree_node.h  Simplex_tree_node_inner.h  Simplex_tree_owner.h  Subcloud.h  landscape_a.h  landscapes_algorithm.h
include/gudhi/: landscape_g.h
include/mean_landscapes/: mean_landscapes.h  mean_landscapes_not_ok.h
include/ripser/: landscape_r.h  ripser.h
source/gudhi/: landscape_g.h
test/: test_algorithm_v.cpp  test_diagram_computation.cpp  test_diagram_computation_v.cpp
thread_pool/thread_pool/: thread_pool.hpp
time_test/: Makefile  algo  algo_a_v  algo_dc_m  algo_dc_v  algo_g_m  algo_r_m  average_0_GnuplotScript  average_1_GnuplotScript  average_2_GnuplotScript  bunny_log.txt  example.cpp  log.txt  logalgorithm.txt  loggudhi — копия.txt  logripser.txt  output.txt  t.cpp  test.cpp  test_algorithm.cpp  test_diagram_compitation.cpp  test_diagram_computation.cpp  test_diagram_computation_v.cpp  test_gudhi.cpp  test_ripser.cpp
time_test/dataset/: bunny500.txt  dots50.txt  human500.txt  sphere500.txt  tore500.txt
time_test/dataset/figures/: dots50.txt  human500.txt
time_test/dataset/magnetometer/: s3.txt  s50.txt
time_test/diagrams/: dots50_8.txt  dots50_8_2.txt  magn_50_1e11.txt
time_test/landscapes/: landscape_0.txt  landscape_1.txt  landscape_2.txt
time_test/results/: landscape_0.txt  landscape_1.txt  landscape_2.txt
time_test/source/algorithm/: landscape_a.cpp  landscape_a.h  main.cpp  samples.cpp
time_test/source/gudhi/: landscape_g.cpp  landscape_g.h  main.cpp  mean_landscapes.cpp  point_reader.cpp
time_test/source/mean_landscapes/: mean_landscapes.cpp  mean_landscapes.h
time_test/source/ripser/: landscape_r.cpp  landscape_r.h  mean_landscapes.cpp  ripser.cpp  ripser.h  test.cpp
util/: compare.cpp
